[project]
name = "langrapgh-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.5.3",
    "langsmith>=0.4.6",
    "python-dotenv>=1.1.1",
]
